--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Draggable Todo App</title>
   </head>
   <body>
@@ -63,6 +63,6 @@
 
     <div id="overlay"></div>
 
-    <script src="code.js"></script>
+    <script src="App.js"></script>
   </body>
 </html>
